--- a/index.php.html
+++ b/index.php.html
@@ -156,7 +156,7 @@
     <!--/menu_window-->
   </div>
 
-<div class="page_top"><a href="index.html#"><img src="img/parts/pagetop.png" alt="Scroll to Top"></a></div>
+<div class="page_top"><a href="index.php.html#"><img src="img/parts/pagetop.png" alt="Scroll to Top"></a></div>
 </body>
 </html>  
   
