--- a/page10/index.html
+++ b/page10/index.html
@@ -1,13 +1,35 @@
 <!doctype html>
 <html>
-<?php $pagetitle = "Battling Monsters"; //ページのタイトルを記入します ?>
-<?php $pagecategory = "Exploration"; //ページのカテゴリ名を記入します ?>
-<?php $directory = "../"; ?>
-<?php $titspace = "｜"; ?>
-<?php include('../inc/head.php') ?>
-<?php include('../inc/body_page.php') ?>
-<?php include('../inc/pagetit.php') ?>
-			<nav class="pagenav"><a href="#1">Battle Basics</a><a href="#2">Battle Actions</a><a href="#3">Status Ailments</a></nav>
+
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description" content="Rune Factory 5 Online Manual ">
+<meta name="keywords" content="Rune Factory 5 Online Manual, Rune Factory 5, instruction manual, online manual">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="format-detection" content="telephone=no">
+<title>Battling Monsters｜Rune Factory 5 Online Manual</title>
+<meta property="og:type" content="website">
+<meta property="og:title" content="Battling Monsters｜Rune Factory 5 Online Manual">
+<meta property="og:image" content="../icon.jpg">
+<meta property="og:description" content="Rune Factory 5 Online Manual">
+<!--meta property="og:url" content=""-->
+<meta property="og:site_name" content="Rune Factory 5 Online Manual">
+<meta property="og:locale" content="ja_JP">
+<link href="../style.css" rel="stylesheet" type="text/css">
+<link rel="apple-touch-icon" href="../icon.jpg">
+<link rel="shortcut icon" href="../favicon.ico">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script type="text/javascript" src="../js/menu_btn.js"></script>
+</head>
+  
+<body class="page">
+  <h1 class="tit_game"><a href="../index.php.html">Rune Factory 5 Online Manual</a></h1>
+
+<section class="page01">
+  <header class="hero">
+    <div class="box1">
+      <h2><span class="bg"><small>＊ Exploration ＊</small><big>Battling Monsters</big></span></h2>
+			<nav class="pagenav"><a href="index.html#1">Battle Basics</a><a href="index.html#2">Battle Actions</a><a href="index.html#3">Status Ailments</a></nav>
     </div>
   </header>
 
@@ -102,6 +124,74 @@
 
 </section>
 
-<?php include('../inc/menu_btn.php') ?>
-<?php include('../inc/btn_pagetop.php') ?>
-<?php include('../inc/footer.php') ?>
+
+  <nav class="menu_btn nondis-menu">
+    <div class="menu1"></div><div class="menu2"></div><div class="menu3"></div>
+  </nav>
+  <div id="menu_blank" class="menu_blank_box">
+    <!--menu_window-->
+
+<section class="menu_blank1">
+	<div class="box">
+    <div class="fx">
+      <h2 class="blank_tit_game"><a href="../index.php.html">Rune Factory 5<br><small>Online Manual</small></a></h2>
+      <div class="top_nav_main">
+
+<div class="menu_box02 ">
+  <ul>
+    <li><a href="../page01/index.html">Prologue</a></li>
+    <li><a href="../page15/index.html">Map of Rigbarth</a></li>
+  </ul>
+</div>
+<div class="menu_box03">
+  <div class="menu_box01">
+    <h2>Game Basics</h2>
+    <ul>
+      <li><a href="../page02/index.html">Controls</a></li>
+      <li><a href="../page03/index.html">Starting the Game</a></li>
+      <li><a href="../page04/index.html">Playing the Game</a></li>
+      <li><a href="../page05/index.html">Screen Icons</a></li>
+    </ul>
+  </div>
+  <div class="menu_box01">
+    <h2>Life in Rigbarth</h2>
+    <ul>
+      <li><a href="../page06/index.html">Requests</a></li>
+      <li><a href="../page07/index.html">Missions</a></li>
+      <li><a href="../page08/index.html">Farming</a></li>
+      <li><a href="../page09/index.html">Decorating Your Home &amp; Creating Items</a></li>
+    </ul>
+  </div>
+</div>
+<div class="menu_box03">
+  <div class="menu_box01">
+    <h2>Exploration</h2>
+    <ul>
+      <li><a href="index.html">Battling Monsters</a></li>
+      <li><a href="../page11/index.html">Befriending Monsters</a></li>
+      <li><a href="../page12/index.html">Dungeons &amp; Bosses</a></li>
+    </ul>
+  </div>
+  <div class="menu_box01">
+    <h2>Relationships</h2>
+    <ul>
+      <li><a href="../page13/index.html">Making Friends</a></li>
+      <li><a href="../page14/index.html">Romance &amp; Marriage</a></li>
+    </ul>
+  </div>
+</div>
+      </div>      
+    </div>
+	</div>
+</section>
+    <!--/menu_window-->
+  </div>
+
+<div class="page_top"><a href="index.html#"><img src="../img/parts/pagetop.png" alt="Scroll to Top"></a></div>
+
+<footer><img src="../img/parts/footer_mark.png" alt=""></footer>
+<script type="text/javascript" src="../js/smooth-scroll.min.js"></script>
+<script type="text/javascript" src="../js/smooth-scroll-order.js"></script>
+</script>
+</body>
+</html>
